name:                VTGames
version:             0.1.0.0
synopsis:            A collection of small games: Hangman and 2048
description:         A Haskell project Hangman and 2048 games.
author:              Van Tuan
maintainer:          vantuan132005@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable tinygames
    main-is:             Main.hs
    hs-source-dirs:      src
    build-depends:       base >= 4.7 && < 5,
                         random,
                         process,
                         ansi-terminal
    default-language:    Haskell2010
