cabal-version:      3.0
name:               Homework16
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             tuvu
maintainer:         quangtu.vu@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable Homework16
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1,random ^>=1.2.1.2
    hs-source-dirs:   app ,src
    default-language: Haskell2010
    other-modules:HelperFunc.Helper,User.Player,User.Types,Actions.CheckWinner,Actions.Combine
